Save command in :w !<command> for later :w !! Fixes PR/8169